---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 662
expression: "pub opaque record Animal {\n  Cat(goes_outside: Bool)\n  Dog(plays_fetch: Bool)\n}\n"
---
----- SOURCE CODE
pub opaque record Animal {
  Cat(goes_outside: Bool)
  Dog(plays_fetch: Bool)
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

declare class Cat extends _.CustomType {
  constructor(goes_outside: boolean);
  
  goes_outside: boolean;
}

declare class Dog extends _.CustomType {
  constructor(plays_fetch: boolean);
  
  plays_fetch: boolean;
}

export type Animal$ = Cat | Dog;
